# deepseek-ocr-api

./: .cursorignore  .gitignore  Dockerfile  README.md  __init__.py  config.py  constants.py  docker-compose.yml  env.example  logger.py  main.py  py.typed  pyproject.toml  pytest.ini  requirements.txt
api/: __init__.py  app.py  dependencies.py  handlers.py  middleware.py  routes.py  security.py
api/routers/: __init__.py  health.py  ocr.py
scripts/: install-deps.ps1  run-tests.ps1  start-server.ps1
services/: __init__.py  image_compressor.py  image_processor.py  inference_engine.py  model_loader.py  ocr_service.py  pdf_processor.py  text_cleaner.py
tests/: __init__.py  conftest.py  test_api.py  test_ocr_service.py
tests/fixtures/: .gitkeep  create_test_files.py
utils/: __init__.py  files.py
