[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepseek-ocr-api"
version = "1.0.0"
description = "FastAPI service for OCR processing using DeepSeek-OCR model"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Maximiliano Veiga"}
]
keywords = ["ocr", "deepseek", "fastapi", "document-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
]

dependencies = [
    "accelerate==1.11.0",
    "fastapi==0.121.1",
    "uvicorn==0.38.0",
    "pydantic==2.12.4",
    "PyMuPDF==1.26.6",
    "transformers==4.46.3",
    "torch>=2.0.0",
    "pillow==12.0.0",
    "python-multipart==0.0.20",
    "python-dotenv==1.2.1",
    "slowapi>=0.1.9",
]

[project.scripts]
deepseek-ocr-api = "deepseek_ocr_api.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["deepseek_ocr_api*"]

